[package]
name = "hyoubkp_mobile_ios"
version = "0.1.1"
edition = "2021"

[[bin]]
name = "HyoubkpMobile"
path = "src/main.rs"

[features]
tokmap_user = ["hyoubkp/tokmap_user"]
tokmap_rule = ["hyoubkp/tokmap_rule"]

[dependencies]
hyoubkp = { path = "../hyoubkp" }
hyoubkp_base = { path = "../hyoubkp_base" }

[build-dependencies]
cmake = "0.1"
